--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mocha": "^3.0.2",
     "object.assign": "^4.0.4",
     "qs": "^6.2.1",
+    "sinon": "^2.1.0",
     "sinon-browser-only": "^1.12.1",
     "sinon-chai": "^2.8.0",
     "ws": "^1.1.1"
